--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=vipulsingh.cg@gmail.com
-spring.mail.password=rcajrhxyppfxbnvc
+spring.mail.username=
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
